--- a/WeatherModel.ipynb
+++ b/WeatherModel.ipynb
@@ -2325,7 +2325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# comparison_df.to_csv(\"Predictions_for_2022_test_set.csv\", index=False)  # Saving the comparison dataframe as a csv file"
+    "# comparison_df.to_csv(\"Predictions_for_2022.csv\", index=False)  # Saving the comparison dataframe as a csv file"
    ]
   }
  ],
