--- a/WeatherModel.ipynb
+++ b/WeatherModel.ipynb
@@ -29,7 +29,7 @@
    "id": "810ced34-26cc-42ea-b226-774c0f8ca03b",
    "metadata": {},
    "source": [
-    "##### *I present to You a temperature prediction model that’s cooler than the Arctic 😎*"
+    "##### *I present to you a temperature prediction model that’s cooler than the Arctic 😎*"
    ]
   },
   {
